--- a/InkTrack Report/Windows/Dialog/AdminAuthDialog.xaml
+++ b/InkTrack Report/Windows/Dialog/AdminAuthDialog.xaml
@@ -11,7 +11,7 @@
 		Background="Transparent"
 		WindowStartupLocation="CenterScreen" 
 		SizeToContent="WidthAndHeight"
-		ResizeMode="NoResize">
+		ResizeMode="NoResize" Loaded="Window_Loaded">
 	<Border Background="White" CornerRadius="20" Width="484" Height="auto" Margin="20,20,20,30">
 		<Border.Effect>
 			<DropShadowEffect Direction="270" Opacity="0.25" Color="#000000" BlurRadius="20" ShadowDepth="10"/>
