--- a/InkTrack Report/Windows/WindowTraySelectFuntion.xaml
+++ b/InkTrack Report/Windows/WindowTraySelectFuntion.xaml
@@ -28,6 +28,8 @@
 			<DropShadowEffect Direction="270" Opacity="0.25" Color="#000000" BlurRadius="20" ShadowDepth="10"/>
 		</Border.Effect>
 		<StackPanel ClipToBounds="True">
+			<TextBlock Text="Версия 1.0" FontSize="14" Margin="4,0,0,0"/>
+			<Rectangle Height="8"/>
 			<Button Content="Сервис" Click="OpenServiceButtons_Click" Name="Button_Service" Width="365"/>
 			<StackPanel Name="ServiceButtons" Visibility="Collapsed">
 				<Button Content="Замена картриджа" Click="OpenReplaceCartridge" >
@@ -35,7 +37,6 @@
 				<Rectangle Height="10"/>
 				<Button Content="Закрыть InkTracker Report" Click="Shutdown_Click"/>
 			</StackPanel>
-
 		</StackPanel>
     </Border>
 </Window>
