--- a/InkTrack/Windows/WindowTraySelectFuntion.xaml
+++ b/InkTrack/Windows/WindowTraySelectFuntion.xaml
@@ -28,7 +28,7 @@
 			<DropShadowEffect Direction="270" Opacity="0.25" Color="#000000" BlurRadius="20" ShadowDepth="10"/>
 		</Border.Effect>
 		<StackPanel ClipToBounds="True">
-			<TextBlock Text="Версия 1.0" FontSize="14" Margin="4,0,0,0"/>
+			<TextBlock Text="Версия 0.1 (Сборка 16072025)" FontSize="14" Margin="4,0,0,0"/>
 			<Rectangle Height="8"/>
 			<Button Content="Сервис" Click="OpenServiceButtons_Click" Name="Button_Service" Width="365"/>
 			<StackPanel Name="ServiceButtons" Visibility="Collapsed">
